test/fixtures/invalid/invalid_component.blade.php
<x-alert type="error">
    Error message
    <!-- Missing </x-alert> -->
